[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betaearth"
version = "0.1.0"
description = "BetaEarth: Emulating Earth Observation Foundation Model Embeddings"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.9"
authors = [
    {name = "Mikolaj Czerkawski", email = "miko@asterisk.coop"},
]
keywords = ["earth-observation", "embeddings", "remote-sensing", "sentinel-2", "sentinel-1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "segmentation-models-pytorch>=0.3.0",
    "numpy>=1.21",
    "huggingface-hub>=0.14",
]

[project.optional-dependencies]
rasterio = ["rasterio>=1.3"]

[project.urls]
Homepage = "https://github.com/asterisk-labs/beta-earth"
Models = "https://huggingface.co/asterisk-labs"

[tool.setuptools.packages.find]
include = ["betaearth*"]
