[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betaearth"
version = "0.2.2"
description = "BetaEarth: AlphaEarth Embedding Emulator"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.9"
authors = [
    {name = "Mikolaj Czerkawski", email = "miko@asterisk.coop"},
]
keywords = ["earth-observation", "embeddings", "remote-sensing", "sentinel-2", "sentinel-1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "segmentation-models-pytorch>=0.3.0",
    "numpy>=1.21",
    "huggingface-hub>=0.14",
]

[project.optional-dependencies]
rasterio = ["rasterio>=1.3"]
generate = [
    "rasterio>=1.3",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "pyproj>=3.4",
    "shapely>=2.0",
    "scikit-learn>=1.0",
    "Pillow>=9.0",
]
demo = [
    "betaearth[generate]",
    "streamlit>=1.30",
    "streamlit-folium>=0.18",
    "folium>=0.15",
]

[project.urls]
Homepage = "https://github.com/asterisk-labs/beta-earth"
Models = "https://huggingface.co/asterisk-labs"
"Asterisk Labs" = "https://asterisk.coop"

[project.scripts]
betaearth-generate = "betaearth.generate:main"

[tool.setuptools.packages.find]
include = ["betaearth*"]
